# truinlag

./: .gitignore  Cargo.toml  Challenges - Tabellenblatt1.csv  Kaffskala - Tabellenblatt1.csv  dump.json  genius.md  history.txt  testeroni.txt
src/: api.rs  blocking.rs  challenge.rs  commands.rs  engine.no  engine.rs  error.rs  lib.rs  main.no  main.rs  runtime.rs  session.rs  syncy.rs  team.rs
src/api/: error.rs  mod.rs
