[package]
name = "truinlag"
description = "a library and the engine for the trainlag game rust rewrite which will never be completed"
version = "0.1.0"
edition = "2021"
authors = ["Nelio Zoller"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
rand_distr = "0.4"
rand = "0.8"
bincode = "1.3"
ron = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = { version = "1.4", features = ["serde"] }
async-broadcast = "0.6"
bonsaidb = { version = "0.5.0", features = ["local", "async"] }
chrono = { version = "0.4.33", features = ["serde"] }
partially = { version = "0.2.1", features = ["derive"] }
image = "0.25.1"
serialimage = "4.1.1"
geo = { version = "0.28.0", features = ["serde"] }
strsim = "0.11.1"
