[package]
name = "truinlag"
description = "a library and the engine for the trainlag game rust rewrite which will never be completed"
version = "0.0.2"
edition = "2021"
authors = ["Nelio Zoller"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["blocking"], optional = true }
csv = { version = "1.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
rand_distr = { version = "0.5", optional = true }
rand = { version = "0.9", optional = true }
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = { version = "1.4", features = ["serde"] }
async-broadcast = "0.7"
bonsaidb = { version = "0.5", features = ["local", "async"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
partially = { version = "0.2", features = ["derive"] }
image = "0.25"
serialimage = "4.1"
geo = { version = "0.30", features = ["serde"], optional = true }
strsim = { version = "0.11", optional = true }

[features]
build-binary = [
  "reqwest",
  "csv",
  "rand_distr",
  "rand",
  "bonsaidb",
  "geo",
  "strsim",
]

[[bin]]
name = "truinlag"
required-features = ["build-binary"]
